Corrections, now it´s responsive and has the correct alignment

--- a/src/Components/Tags/Tags.css
+++ b/src/Components/Tags/Tags.css
@@ -8,19 +8,15 @@
     --secondary-light-color: #F5F5F9;
 }
 
-.tag-component{
-    width: 15%;
-    border: 1px solid var(--main-light-color);
-}
-
 input[type=checkbox] {
     transform: scale(1.5);
     -ms-transform: scale(1.5);
     -webkit-transform: scale(1.5);
-    padding: 10px;
-    margin-left: 10px;
 }
 
+input:checked {
+    background-color: var(--main-accent-color);
+}
 p{
     font-size: 20px;
     line-height: 1.5;
